--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,9 @@ members = [
     "day01a",
     "day01b",
     "day02a",
-    "day02b"
+    "day02b",
+    "day03a",
+    "day03b"
 ]
 
 [workspace.dependencies]
