--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,10 @@ members = [
     "day02a",
     "day02b",
     "day03a",
-    "day03b"
+    "day03b",
+    "day04a",
+    "day04b"
+
 ]
 
 [workspace.dependencies]
